# take-it

./: add_test_data.py  create_admin.py  export_app.sh  manage.py  pyproject.toml  replit.nix  test_invoice_parsing.py
attached_assets/: Pasted--File-home-runner-workspace-pythonlibs-lib-python3-11-site-packages-django-template-backends-djan-1743102596683.txt  Pasted-Error-while-parsing-CSS-file-Traceback-most-recent-call-last-File-home-runner-workspace-py-1743076117226.txt  Pasted-Internal-Server-Error-reports-sales-Traceback-most-recent-call-last-File-home-runner-wor-1743075392314.txt  Pasted-Internal-Server-Error-suppliers-add-Traceback-most-recent-call-last-File-home-runner-wor-1743102840065.txt  Pasted-Replit-Prompt-Project-Name-Pharmacy-Management-System-Django-MySQL-Overview-Create-a-Django-we-1742887019613.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-manage-py-line-20-in-module--1743076756451.txt
pharmacy_app/: admin.py  forms.py  middleware.py  models.py  signals.py  urls.py  utils.py  views.py  views.py.bak
pharmacy_app/migrations/: 0002_drug_barcode.py  0003_supplier_invoiceupload_invoiceitem.py  0004_alter_invoiceitem_extracted_brand_and_more.py  0005_patient_is_walk_in.py  0006_userprofile_dark_mode.py
pharmacy_app/templates/: base.html  dashboard.html  login.html  navbar.html  profile.html
pharmacy_app/templatetags/: custom_filters.py
pharmacy_management/: asgi.py  settings.py  urls.py  wsgi.py
pharmacy_system_export/pharmacy_app/: admin.py  apps.py  utils.py
pharmacy_system_export/pharmacy_management/: settings.py  (+1 more)
(+38 files in other folders)
