[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.7",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "fuzzywuzzy>=0.18.0",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pdf2image>=1.17.0",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
    "pytesseract>=0.3.13",
    "python-levenshtein>=0.27.1",
    "reportlab>=4.3.1",
    "xhtml2pdf>=0.2.17",
    "xlsxwriter>=3.2.2",
]
